plugins {
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.10.4' apply false
}

group = 'com.arayby'
version = '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
        testImplementation 'org.assertj:assertj-core:3.27.3'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test).configureEach {
        jvmArgs '--enable-preview'
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs '--enable-preview'
    }
}
